# unfydqry

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  Package.swift  README.md
.claude/: settings.json
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: flutter-tests.yml  kotlin-tests.yml  release-aar.yml  release-xcframework.yml  release.yml  rust-bench-comment.yml  rust-bench.yml
android/sample/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/sample/app/: build.gradle.kts
android/sample/unifiedquery/: build.gradle.kts
android/sample/unifiedquery-android/: build.gradle.kts  consumer-rules.pro
android/sample/universalquery/: build.gradle.kts
core/: Cargo.toml
core/benches/: highlight.rs  index.rs  normalize.rs  search.rs
core/benches/helpers/: mod.rs
core/src/: config.rs  engine.rs  lib.rs  normalize.rs
core/src/normalize/: mod.rs  steps.rs
core/src/search/: all_terms.rs  damerau_levenshtein.rs  editdist.rs  fuzzy_trigram.rs  levenshtein.rs  mod.rs  prefix.rs  substring.rs  suffix.rs  trigram_bm25.rs
core/tests/: conformance.rs
docs/: README.ja.md  android.md  cross-platform-search-engine-design.md  flutter-plugin.md  ios.md
docs/ja/: AGENTS.md  CONTRIBUTING.md  README.md  cross-platform-search-engine-design.md
flutter/: .gitignore
flutter/android/: build.gradle.kts
flutter/example/: pubspec.yaml
flutter/example/lib/: main.dart
flutter/ios/Classes/: UnfydqryPlugin.swift
flutter/ios/unfydqry/: Package.swift
flutter/lib/: unfydqry.dart
flutter/lib/src/: field_value.dart  hit.dart  normalize_options.dart  record_hit.dart  reindex_status.dart  search_engine.dart  search_exception.dart  search_strategy.dart
flutter/test/: unfydqry_test.dart
ios/Sources/SearchCore/: SearchCore.swift
ios/Sources/UnifiedQuery/: UnifiedQuery.swift
ios/sample/: project.yml
spec/: README.md
(+44 files in other folders)
