[package]
name = "unfydqry"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
license = "MIT"

[lib]
name = "unfydqry"
# rlib: cargo test / internal use
# staticlib: iOS XCFramework
# cdylib: Android .so
crate-type = ["rlib", "staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
uniffi = { version = "0.31", features = ["cli"] }
# Pinned to 0.36: rusqlite 0.40 depends on libsqlite3-sys 0.38, which uses the
# unstable `cfg_select` feature and does not compile on stable Rust (as of 1.92).
rusqlite = { version = "0.36", features = ["bundled"] }
unicode-normalization = "0.1"
thiserror = "2"

[dev-dependencies]
# Used by the Rust conformance test (tests/conformance.rs) to read ../spec/*.json.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "search"
harness = false

[[bench]]
name = "normalize"
harness = false

[[bench]]
name = "index"
harness = false

[[bench]]
name = "highlight"
harness = false

# Parallelize codegen to speed up the (release-optimized) benchmark compile in
# CI. Both the PR and the base build with this same profile, so the minor
# optimization trade-off is consistent and doesn't skew the relative comparison.
[profile.bench]
codegen-units = 256
